# Tessera

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: assemblies.rs  components.rs  controls.rs  deviations.rs  entities.rs  features.rs  hazards.rs  mates.rs  mod.rs  ncrs.rs  processes.rs  project.rs  quotes.rs  requirements.rs  results.rs  risks.rs  settings.rs  stackups.rs  suppliers.rs  tests.rs  traceability.rs  version_control.rs  work_instructions.rs
apps/desktop/src/lib/api/: index.ts  tauri.ts  types.ts
apps/desktop/src/lib/components/: EntityHistory.svelte
apps/desktop/src/lib/config/: entities.ts  filters.ts  index.ts
apps/desktop/src/lib/stores/: project.ts  theme.ts
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/desktop/src/routes/assemblies/: +page.svelte
apps/mobile/: package-lock.json  package.json  vite.config.ts
apps/mobile/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
apps/mobile/.svelte-kit/types/: route_meta_data.json
apps/mobile/src/: app.css  app.html
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/mobile/src/routes/: +layout.svelte  +page.svelte
crates/tdt-cli/: Cargo.toml
crates/tdt-cli/src/: main.rs
crates/tdt-cli/src/cli/: args.rs  entity_cmd.rs  filters.rs  helpers.rs  mod.rs  output.rs  table.rs  viz.rs
crates/tdt-cli/src/cli/commands/: asm.rs  baseline.rs  blame.rs  bulk.rs  cache.rs  capa.rs  cmp.rs  completions.rs  config.rs  ctrl.rs  dev.rs  diff.rs  dmm.rs  dsm.rs  feat.rs  haz.rs  history.rs  init.rs  link.rs  log.rs  lot.rs  mate.rs  mod.rs  ncr.rs  proc.rs  quote.rs  recent.rs  req.rs  risk.rs  rslt.rs  schema.rs  search.rs  status.rs  sup.rs  tags.rs  test.rs  tol.rs  trace.rs  utils.rs  validate.rs  (+2 more)
crates/tdt-cli/src/cli/commands/export/: mod.rs  sysml.rs
crates/tdt-cli/src/cli/commands/import/: asm.rs  capa.rs  cmp.rs  common.rs  ctrl.rs  feat.rs  mod.rs  ncr.rs  proc.rs  quote.rs  req.rs  risk.rs  rslt.rs  sup.rs  sysml.rs  test.rs
crates/tdt-cli/src/cli/commands/report/: bom.rs  fmea.rs  mod.rs  open_issues.rs  rvm.rs  test_status.rs  tolerance.rs
crates/tdt-cli/src/cli/commands/workflow/: approve.rs  check.rs  mod.rs  reject.rs  release.rs  review.rs  submit.rs  team.rs  utils.rs
crates/tdt-cli/tests/: bom_tests.rs  cli_tests.rs  edge_case_tests.rs  link_symmetry_tests.rs  manufacturing_tests.rs  quality_tests.rs  req_tests.rs  risk_tests.rs  traceability_tests.rs  verification_tests.rs  workflow_guard_tests.rs  workflow_tests.rs
crates/tdt-core/: Cargo.toml
crates/tdt-core/schemas/: act.schema.json  asm.schema.json  capa.schema.json  cmp.schema.json  ctrl.schema.json  dev.schema.json  feat.schema.json  haz.schema.json  lot.schema.json  mate.schema.json  ncr.schema.json  proc.schema.json  quot.schema.json  req.schema.json  risk.schema.json  rslt.schema.json  sup.schema.json  test.schema.json  tol.schema.json  work.schema.json
crates/tdt-core/src/: lib.rs
crates/tdt-core/src/core/: config.rs  entity.rs  gdt_torsor.rs  git.rs  identity.rs  links.rs  loader.rs  manufacturing.rs  mod.rs  project.rs  provider.rs  sdt.rs  shortid.rs  stats.rs  suspect.rs  team.rs  workflow.rs
crates/tdt-core/src/core/cache/: mod.rs  queries.rs  schema.rs  serialize.rs  sync.rs  tests.rs  types.rs
crates/tdt-core/src/core/git/: commit.rs  index.rs  mod.rs  repo.rs  shell.rs
crates/tdt-core/src/entities/: assembly.rs  capa.rs  component.rs  control.rs  dev.rs  hazard.rs  lot.rs  mate.rs  mod.rs  ncr.rs  process.rs  quote.rs  requirement.rs  result.rs  risk.rs  safety.rs  stackup.rs  supplier.rs  test.rs  work_instruction.rs
crates/tdt-core/src/schema/: mod.rs  registry.rs  template.rs  validator.rs  wizard.rs
crates/tdt-core/src/services/: assembly.rs  base.rs  capa.rs  common.rs  component.rs  control.rs  deviation.rs  feature.rs  hazard.rs  lot.rs  mate.rs  mod.rs  ncr.rs  process.rs  quote.rs  requirement.rs  result.rs  risk.rs  stackup.rs  supplier.rs  test.rs  traceability.rs  work_instruction.rs  workflow.rs  workflow_guard.rs
crates/tdt-core/src/sysml/: export.rs  import.rs  mapping.rs  mod.rs  model.rs  sysml_subset.pest
crates/tdt-core/src/yaml/: diagnostics.rs  mod.rs  parser.rs  template.rs
crates/tdt-core/templates/: requirement.yaml.tera  risk.yaml.tera  rslt.yaml.tera  test.yaml.tera
crates/tdt-tauri-commands/: Cargo.toml
crates/tdt-tauri-commands/src/: lib.rs
crates/tdt-tauri-commands/src/commands/: assemblies.rs  capas.rs  deviations.rs  entities.rs  lots.rs  mates.rs  mod.rs  ncrs.rs  quotes.rs  requirements.rs  results.rs  risks.rs  settings.rs  tests.rs  traceability.rs  version_control.rs  work_instructions.rs  workflow.rs
docs/: 3d-tolerance-analysis.html  assembly.md  capa.md  cli.html  collaboration.html  component.md  config.md  control.md  deviation.md  dsm.md  feature.md  hazard.md  index.html  integrations.html  lot.md  manufacturing.html  mate.md  ncr.md  process.md  quote.md  recent.md  relationships.md  reports.html  requirements.md  result.md  risk.md  search.md  stackup.md  supplier.md  tags.md  test.md  tolerance.html  tutorial.html  why-plain-text.html  work_instruction.md  workflow.md
schemas/: asm.schema.json  capa.schema.json  cmp.schema.json  ctrl.schema.json  feat.schema.json  lot.schema.json  proc.schema.json  req.schema.json  risk.schema.json  rslt.schema.json  sup.schema.json  tol.schema.json  work.schema.json
src/cli/: viz.rs
src/cli/commands/: feat.rs  tol.rs  validate.rs
src/core/: gdt_torsor.rs  sdt.rs
src/entities/: feature.rs
tests/: manufacturing_tests.rs  tolerance_tests.rs  traceability_tests.rs
tests/common/: mod.rs
tests/fixtures/: valid_risk.yaml
(+276 files in other folders)
