[workspace]
resolver = "2"
members = [
    "crates/tdt-core",
    "crates/tdt-cli",
    "crates/tdt-tauri-commands",
    "apps/desktop/src-tauri",
    "apps/mobile/src-tauri",
]

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jackhale98/Tessera"
homepage = "https://github.com/jackhale98/Tessera"
authors = ["Jack Hale"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"

# Schema & Templates
jsonschema = "0.29"
tera = "1"

# Identity & Time
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# File System
walkdir = "2"
directories = "5"

# Utilities
rust-embed = "8"
rand = "0.9"

# 3D Tolerance Analysis
nalgebra = { version = "0.34", default-features = false, features = ["libm", "macros", "serde-serialize-no-std", "alloc"] }

# Parsing
pest = "2"
pest_derive = "2"

# Cache
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
csv = "1.4"

# Git (pure-Rust, works on mobile)
gix = { version = "0.72", default-features = false, features = ["basic", "revision", "status", "index", "blob-diff", "tree-editor"] }

# CLI-specific
clap = { version = "4", features = ["derive", "env", "string"] }
dialoguer = "0.11"
console = "0.15"
tabled = "0.20"
clap_complete = "4.5"
drawille = "0.3"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }

# Platform-specific
libc = "0.2.178"

# Async (for Tauri)
tokio = { version = "1", features = ["full"] }

# Reduce debug build size
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false
opt-level = 1

# Optimize release builds for size
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
