[package]
name = "tdt-tauri-commands"
version = "0.7.0"
description = "Shared Tauri command handlers for TDT desktop and mobile apps"
authors = ["Tessera Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tdt_tauri_commands"

[dependencies]
# Core library
tdt-core = { package = "tessera-design-toolkit-core", path = "../tdt-core" }

# Tauri
tauri = { version = "2", features = [] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Logging
log = "0.4"

# Error handling
thiserror = "2"
