[package]
name = "tdt-desktop"
version = "0.6.2"
description = "Tessera Desktop - Engineering Artifact Management GUI"
authors = ["Tessera Contributors"]
license = "MIT"
repository = "https://github.com/your-org/pdt"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tdt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library (package renamed but lib is still tdt_core)
tdt-core = { package = "tessera-design-toolkit-core", path = "../../../crates/tdt-core" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Logging
log = "0.4"

# Error handling
thiserror = "2"
