[package]
name = "tdt-mobile"
version = "0.6.2"
description = "Tessera Mobile - Engineering Artifact Management for iOS and Android"
authors = ["Tessera Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tdt_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared Tauri commands
tdt-tauri-commands = { path = "../../../crates/tdt-tauri-commands" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
